--- a/templates/obras/editor_catalogo.html
+++ b/templates/obras/editor_catalogo.html
@@ -937,6 +937,9 @@
         </div>
         
         <div class="nav-section">
+            <a href="/" class="nav-item">
+                <i class="fas fa-home"></i> Ir a Inicio
+            </a>
             <a href="{% url 'editor' %}" class="nav-item">
                 <i class="fas fa-arrow-left"></i> Volver a Catálogos
             </a>
